--- a/bai1/bai1.html
+++ b/bai1/bai1.html
@@ -41,7 +41,7 @@
             </div>
         </form>
         <br>
-        <table border="1" id="table">
+        <table  id="table">
             <thead>
                 <th>ID</th>
                 <th>Product name</th>
